# bonfire

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile-mcp  README.md  bonfire.py  build_deploy.sh  client.py  config.yaml  entry_points.txt  entrypoint.sh  example_config.yaml  install.sh  out1.json  process-rbac-foo.sh  pyproject.toml  pytest.ini  renovate.json  requirements.txt  search_replace.py  setup.cfg  setup.py
.github/workflows/: release.yml  shellcheck.yml  tests.yml
.tekton/: bonfire-pull-request.yaml  bonfire-push.yaml
bonfire/: app_interface.py  bonfire.py  cicd.py  config.py  configmaps.py  elastic_logging.py  local.py  local_config.py  namespaces.py  openshift.py  output.py  processor.py  project.py  qontract.py  secrets.py  utils.py
bonfire-api/: index.py
bonfire/resources/: default-cypress.yaml  default-iqe-cji.yaml  default_config.yaml  default_local_config.yaml  ephemeral-clowdenvironment.yaml  ephemeral-cluster-clowdenvironment.yaml  local-cluster-clowdenvironment.yaml  pr_check_template.sh  reservation-template.yaml
bonfire_lib/: __init__.py  clusters.py  config.py  core_resources.py  deploy.py  k8s_client.py  pools.py  qontract.py  repo_fetch.py  reservations.py  resource_types.py  status.py  utils.py
bonfire_lib/templates/: clowdenvironment.yaml.j2  clowdjobinvocation.yaml.j2  clusterreservation.yaml.j2  reservation.yaml.j2
bonfire_mcp/: README.md  __init__.py  __main__.py  auth.py  formatters.py  pyproject.toml  server.py
cicd/: README.md  _common_container_logic.sh  _common_deploy_logic.sh  bootstrap.sh  build.sh  cji_smoke_test.sh  deploy_ephemeral_db.sh  deploy_ephemeral_env.sh  oc_with_retry.sh  post_test_results.sh  pr_check_template.sh  smoke_test.sh  unit_test_example.sh  unit_test_example_django.sh  unit_test_example_no_django.sh
cicd/examples/: pr_check_template.sh  unit_test_example.sh  unit_test_example_ephemeral_db.sh
cicd/iqe_pod/: create_iqe_pod.py  env_parser.py  iqe_runner.sh
go/: AGENTS.md  go.mod  go.sum
go/pkg/ephemeral/: client_iface.go  clusters.go  config.go  json.go  k8s_client.go  mock_client_test.go  pools.go  pools_test.go  reservations.go  reservations_test.go  status.go  status_test.go  utils.go  utils_test.go
resources/: ephemeral-clowdenvironment.yaml
telemetry/: es-deploy.yaml
tests/: conftest.py  test_app_configs.py  test_bonfire.py  test_get_apps.py  test_labels_test.sh  test_local.py  test_processor.py  test_utils.py
tests/data/: labelstest.Dockerfile  namespace_data.json  reservation_data.json
tests/test_bonfire_lib/: __init__.py  conftest.py  test_config.py  test_core_resources.py  test_deploy.py  test_k8s_client.py  test_pools.py  test_qontract.py  test_repo_fetch.py  test_reservations.py  test_status.py  test_utils.py
tests/test_bonfire_mcp/: __init__.py  conftest.py  test_auth.py  test_formatters.py  test_integration.py  test_server.py
utils/: ci_bootstrap.sh  create_iqe_pod.py  ephemeral_namespace_reconciler.sh  namespace_reservation_reconciler.sh  run_iqe_tests.sh  search_replace.py
