[metadata]
name = crc-bonfire
author = Brandon Squizzato
author_email = bsquizza@redhat.com
description = A CLI tool used to deploy ephemeral environments for testing cloud.redhat.com applications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://www.github.com/RedHatInsights/bonfire
classifiers =
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
entry_points = file:entry_points.txt
install_requires =
    click>=7.0.0
    gql>=3.0.0a5
    ocviapy>=0.3.2
    app-common-python>=0.1.6
    python-dotenv>=0.15.0
    tabulate>=0.8.7
    requests>=2.24.0
    pyyaml>=5.3.1
    wait-for>=1.1.4
setup_requires = setuptools_scm
python_requires = >=3.6
include_package_data = True
packages = find:

[options.extras_require]
test =
    flake8

[flake8]
max-line-length = 100
