[metadata]
name = crc-bonfire
author = Brandon Squizzato
author_email = bsquizza@redhat.com
description = A CLI tool used to deploy ephemeral environments for testing cloud.redhat.com applications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://www.github.com/RedHatInsights/bonfire
classifiers =
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
entry_points = file:entry_points.txt
install_requires =
    aiohttp==3.6.2
    async-timeout==3.0.1
    attrs==20.2.0
    certifi==2020.6.20
    chardet==3.0.4
    click==7.1.2
    gql==3.0.0a1
    graphql-core==3.1.2
    idna==2.10
    multidict==4.7.6
    parsedatetime==2.6
    promise==2.3
    PyYAML==5.3.1
    requests==2.24.0
    Rx==1.6.1
    setuptools-scm==4.1.2
    sh==1.14.0
    six==1.15.0
    urllib3==1.25.10
    wait-for==1.1.4
    websockets==8.1
    yarl==1.5.1
    tabulate==0.8.7
    python-dotenv==0.15.0
    ocviapy==0.3.2
    app-common-python==0.1.6
setup_requires = setuptools_scm
python_requires = >=3.6
include_package_data = True
packages = find:

[options.extras_require]
test =
    flake8

[flake8]
max-line-length = 100
