[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "crc-bonfire-mcp"
dynamic = ["version"]
description = "MCP server for managing bonfire ephemeral environments"
license = { text = "MIT License" }
requires-python = ">=3.10"
authors = [
    { name = "Brandon Squizzato", email = "bsquizza@redhat.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "PyYAML",
    "kubernetes>=29.0.0",
    "jinja2>=3.1.0",
    "gql[requests]>=3.5.0",
    "requests>=2.33.0",
    "cached_property",
    "mcp>=1.0.0",
]

[project.scripts]
bonfire-mcp = "bonfire_mcp.server:main"

[tool.setuptools_scm]
root = ".."

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = [".."]
include = ["bonfire_lib*", "bonfire_mcp*"]
namespaces = false

[tool.setuptools.package-data]
bonfire_lib = ["templates/*.j2"]

[project.urls]
Homepage = "https://www.github.com/RedHatInsights/bonfire"
